# simple-spa-server

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: cargo.yml
src/: args.rs  embedded.rs  main.rs  server.rs
