[package]
name = "simple-spa-server"
version = "0.1.2"
edition = "2024"

[features]
default = []
bundle = ["rust-embed"]
compression = ["rust-embed/compression"]

[dependencies]
tokio = { version = "1", features = ["rt"] }
axum = { version = "0.8", features = ["http2"] }
tower-http = { version = "0.6", features = ["fs"] }
tower = { version = "0.5" }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
rust-embed = { version = "8", optional = true, features = ["mime-guess"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
